--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!--added for bonus-1 start -->
+    <div class="d-flex mt-3 justify-content-center">
+      <div id="loading-spinner" class="spinner-border text-primary d-none" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div> 
+    <!--added for bonus-1 end-->
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
