--- a/index.html
+++ b/index.html
@@ -24,22 +24,32 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
-    <!--added for bonus-1 start -->
-    <div class="d-flex mt-3 justify-content-center">
-      <div id="loading-spinner" class="spinner-border text-primary d-none" role="status">
+
+    <div class="d-flex justify-content-center">
+      <!--added for bonus-1 start -->
+      <div id="loading-spinner" class="mt-3 spinner-border text-primary d-none" role="status">
         <span class="sr-only">Loading...</span>
       </div>
-    </div> 
-    <!--added for bonus-1 end-->
+      <!--added for bonus-1 end-->
+    </div>
+
     <section class="images">
+      <!-- added for bonus-2 start -->
+      <div id="image-counter" class="d-flex mt-3 justify-content-center" role="status">
+        <span class="sr-only">image counter...</span>
+      </div>
+      <!-- added for bonus-2 end -->
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
-        <h3 class="head-title text-center">Select image for create slider</h3>
+        <h3 class="head-title text-center">Select image for create slider <span id="selected-count"></span></h3>
         <div class="input-group col-md-3 mb-2 mb-md-0">
-          <input class="form-control" id="duration" placeholder="slider change duration" type="number" min="1">
+          <input class="form-control" id="duration" placeholder="slider change duration" type="number" min="0" step="100" >
+          <div class="input-group-append">
+            <span class="input-group-text">ms</span>
+          </div>
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
-      <div class="row gallery">
+      <div class="row gallery mt-3">
 
       </div>
     </section>
